--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <!--Titulo de la aplicación en pestaña del navegador-->
     <title>HTML, CSS y JS</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "./assests/style/style.css">
 </head>
 
 <!--Contenido visible de la página web-->
