--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <!--Titulo de la aplicación en pestaña del navegador-->
     <title>HTML, CSS y JS</title>
+    <!--Vincula recursos externos como hojas de estilo, fuentes, íconos-->
     <link rel = "stylesheet" href = "./assests/style/style.css">
 </head>
 
